[package]
name = "tp"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.11", features = ["derive"] }
mylibrary = { git = "https://github.com/sugiura-hiromichi/mylibrary" }
