[package]
name = "tp_"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
documentation = "https://github.com/sugiura-hiromichi/tp"
homepage = "https://github.com/sugiura-hiromichi/tp"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sugiura-hiromichi/tp"
description = "my personal template generator"

[dependencies]
anyhow = "1.0"
clap = { version = "3.2.11", features = ["derive"] }
sugiura-hiromichi_mylibrary = "1"
